--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <nav class="header__menu hidden-mobile">
                 <ul class="header__menu-list">
                     <li class="header__menu-items">
-                        <a href="#" class="header__menu-link">услуги</a>
+                        <a href="#paragraph_1" class="header__menu-link">услуги</a>
                     </li>
                     <li class="header__menu-items">
-                        <a href="#" class="header__menu-link">стоимость</a>
+                        <a href="#paragraph_2" class="header__menu-link">стоимость</a>
                     </li>
                     <li class="header__menu-items">
-                        <a href="#" class="header__menu-link">сроки</a>
+                        <a href="#paragraph_3" class="header__menu-link">сроки</a>
                     </li>
                     <li class="header__menu-items">
                         <a href="#" class="header__menu-link">доп.услуги</a>
@@ -40,11 +40,12 @@
         </div>
     </header>
     <section class="service">
-        <h1>спасение котов с дерева</h1>
+        <h1 >спасение котов с дерева</h1>
     </section>
     <section class="type-service">
        <div class="type-service-img">
         <img src="/images/Cats_Branches_Glance_587857_5120x3413.jpg" alt="">
+        <p id="paragraph_1"></p>
        </div>
        <div class="type-service-blok">
            <div class="type-service-title">
@@ -60,6 +61,7 @@
     <section class="type-service price">
         <div class="type-service-img">
          <img src="/images/Cats_Branches_Glance_587857_5120x3413101.jpg" alt="">
+         <p id="paragraph_2"></p>
         </div>
         <div class="type-service-blok">
             <div class="type-service-title">
@@ -84,6 +86,7 @@
      <section class="type-service price">
         <div class="type-service-img">
          <img src="/images/Cats_Branches_Glance_Whiskers_Ginger_color_588814_5601x3734.jpg" alt="">
+         <p id="paragraph_3"></p>
         </div>
         <div class="type-service-blok">
             <div class="type-service-title">
@@ -114,17 +117,17 @@
         <div class="mobile-overlay__body">
             <ul class="mobile-overlay__list">
                 <li class="mobile-overlay__items">
-                    <a href="#" class="mobile-overlay__link">услуги</a>
+                    <a href="#paragraph_1" class="mobile-overlay__link">услуги</a>
                 </li> 
                 <li class="mobile-overlay__items">
-                    <a href="#" class="mobile-overlay__link">стоимость</a>
+                    <a href="#paragraph_2" class="mobile-overlay__link">стоимость</a>
                 </li> 
                 <li class="mobile-overlay__items">
-                    <a href="#" class="mobile-overlay__link">сроки</a>
+                    <a href="#paragraph_3" class="mobile-overlay__link">сроки</a>
                 </li> 
-                <li class="mobile-overlay__items">
+                <!--<li class="mobile-overlay__items">
                     <a href="#" class="mobile-overlay__link">блок</a>
-                </li> 
+                </li> -->
             </ul>
         </div>
     </dialog>
