--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="снять кота с дерева Брянск">
+    <meta name="keywords" content="снять кота с дерева Брянск">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/images/2026001-e9e2e2.svg">
     <title>снять кота</title>
