--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="снять кота с дерева Брянск">
+    <meta name="description" content="Спасение животных с деревьев. Высотных работах любой сложности. Обращайтесь к нам.">
     <meta name="keywords" content="снять кота с дерева Брянск">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/images/2026001-e9e2e2.svg">
