--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="снять кота с дерева Брянск">
     <meta name="description" content="Спасение животных с деревьев. Высотных работах любой сложности. Обращайтесь к нам.">
     <meta name="keywords" content="снять кота с дерева Брянск">
+    <meta property="og:title" content="Спасение животных с деревьев в Брянске и району">
+    <meta property="og:url" content="https://services/spasenie-zhivotnykh-s-derevev/">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/images/2026001-e9e2e2.svg">
     <title>снять кота</title>
