--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:title" content="Спасение животных с деревьев в Брянске и району">
     <meta property="og:url" content="https://services/spasenie-zhivotnykh-s-derevev/">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/images/2026001-e9e2e2.svg" type="image/x-icon">
+<link rel="shortcut icon" href="/images/2026001-e9e2e2.svg" type="image/x-icon">
     <link rel="icon" href="/images/2026001-e9e2e2.svg">
     <title>снять кота</title>
 </head>
