--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta property="og:title" content="Спасение животных с деревьев в Брянске и району">
     <meta property="og:url" content="https://services/spasenie-zhivotnykh-s-derevev/">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/images/2026001.png?v=1" type="image/x-icon">
-<link rel="shortcut icon" href="/images/2026001.png?v=1" type="image/x-icon">
-    <link rel="icon" href="/images/2026001-e9e2e2.svg">
+   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
+<link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
     <title>снять кота</title>
 </head>
 <body>
