--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="снять кота с дерева Брянск">
-    <meta name="description" content="Спасение животных с деревьев. Высотных работах любой сложности. Обращайтесь к нам.">
+    <meta name="description" content="Спасение животных с деревьев. Высотные работы любой сложности.">
     <meta name="keywords" content="снять кота с дерева Брянск">
-    <meta property="og:title" content="Спасение животных с деревьев в Брянске и району">
-    <meta property="og:url" content="https://services/spasenie-zhivotnykh-s-derevev/">
+    <meta property="og:title" content="Спасение животных с деревьев в Брянске и по району">
+    <meta property="og:url" content="https://cat32.netlify.app/">
     <link rel="stylesheet" href="style.css">
    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
