--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Профессиональное спасение котов с деревьев в Брянск. Быстрый выезд, опытный специалист. Звоните прямо сейчас!">
+<meta name="keywords" content="спасение котов с деревьев, помощь коту на дереве, снять кота с дерева, кот на дереве, спасение животных, Брянск">
+<meta name="robots" content="index, follow">
     <meta name="description" content="снять кота с дерева Брянск">
     <meta name="description" content="Спасение животных с деревьев. Высотные работы любой сложности.">
     <meta name="keywords" content="снять кота с дерева Брянск">
