--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:title" content="Спасение животных с деревьев в Брянске и по району">
     <meta property="og:url" content="https://cat32.netlify.app/">
     <link rel="stylesheet" href="style.css">
-   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
+   <link rel="icon" href="/images/2026001.png" type="image/x-icon">
+<link rel="icon" href="/images/2026001.png" type="image/png" sizes="32x32">
 <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
     <title>снять кота</title>
 </head>
