--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    <link rel="icon" href="/images/2026001.png" type="image/x-icon">
 <link rel="icon" href="/images/2026001.png" type="image/png" sizes="32x32">
 <link rel="icon" href="/images/2026001-e9e2e2.svg" type="image/svg+xml">
+    <link rel="icon" href="/images/2026001-e9e2e2.svg">
     <title>снять кота</title>
 </head>
 <body>
