--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <li>на сколько далеко вы находитесь </li>
                     <li>от загруженности дорог ( дорожные пробки) и т.п.</li>
                 </ul>
-                В среднем мы приезжаем в течении 1-2 часов. В любом случае, при звонке Вас примерно соориентируют по времени.
-                Если все сотрудники находятся на других объектах, тогда к Вам поедет первый освободившийся.                
+                В среднем мы приезжаем в течении 1-2 часов. В любом случае, при звонке Вас примерно соориентируем по времени.
+                Если все сотрудники находятся на других объектах, тогда к Вам поедет первый освободившийся, в весенние и летнее время года заявки выполняются в вечернее время так как угрозы холода отсутствует .                
              </p>
             </div>
         </div>
